# proyect1_IABD

./: .gitignore  README.md  db_connection.py  main.py  pyproject.toml  streamlit_interface.py
data/processed/: dataset_master.csv
data/raw/: Destinos.csv  Pedidos.csv
docs/: ARCHITECTURE.md  LOGIC.md  RESULTS.md  STRUCTURE.md
src/: streamlit_interface.py
src/config/: db_config.py  fleet_config.py
src/controllers/: clustering_runner.py  main_controller.py
src/data/: clean_data.py  db_connection.py  db_loader.py  feature.py  load_coords.py  provincias_geo.csv
src/data/bbdd_local/: Clientes.csv
src/data/datasets/: Provincias_202512181859.csv
src/data/datasets/bbdd_local/: LineasPedido_202512181859.csv  Productos_202512181859.csv  Provincias_geo.csv
src/data/datasets/processed/: dataset_clustered.csv
src/etl/: clean_data.py  db_loader.py  feature.py  load_coords.py
src/models/: clustering_service.py  routing.py  run_clustering_local.py  test_clustering.csv
src/ui/: streamlit_interface.py
src/utils/: constants.py  map_renderer.py  plot_renderer.py
