[project]
name = "proyect1-iabd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "plotly>=6.5.0",
    "polyline>=2.0.4",
    "pulp>=3.3.0",
    "pyarrow>=14.0.0",
    "pyodbc>=5.3.0",
    "requests>=2.32.5",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.28.0",
    "streamlit-folium>=0.15.0",
    "tqdm>=4.67.1",
]
